Configuration for deploy

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/webapp-pack ###
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=3b07c9410f0dc4dcb88f359b40074aed
 ###< symfony/framework-bundle ###
 
@@ -29,7 +29,8 @@ APP_SECRET=3b07c9410f0dc4dcb88f359b40074aed
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+DATABASE_URL="mysql://adminTF:Z*%9*inieR0^@127.0.0.1:3306/admin_todayfit?serverVersion=mariadb-10.4.11&charset=utf8mb4"
+#DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
