Api + JWT lexik dependencies installed

--- a/.env
+++ b/.env
@@ -43,3 +43,13 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/todayfit_db?serverVersion=mariadb-10.4
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=7b68fa7a755091f2c30026c602d2324a
+###< lexik/jwt-authentication-bundle ###
