--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/webpack-encore": "^3.0.0",
         "core-js": "^3.23.0",
+        "node-sass": "^7.0.1",
         "regenerator-runtime": "^0.13.9",
+        "sass-loader": "^13.0.2",
         "webpack-notifier": "^1.15.0"
     },
     "license": "UNLICENSED",
@@ -14,5 +16,9 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.8",
+        "postcss-loader": "^7.0.1"
     }
 }
