--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.6",
         "autoprefixer": "^10.4.8",
         "bootstrap": "^5.2.0",
         "bootstrap-icons": "^1.9.1",
