--- a/.env
+++ b/.env
@@ -41,7 +41,7 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/todayfit_db?serverVersion=mariadb-10.4
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+# MAILER_DSN=null//null
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
@@ -53,3 +53,8 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=7b68fa7a755091f2c30026c602d2324a
 ###< lexik/jwt-authentication-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://"info.todayfit@gmail.com":"a3OZedoE0&vg"@default
+###< symfony/google-mailer ###
