Secured access only for Admin for protected pages on site

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,6 +34,7 @@ security:
         #- { path: ^/admin, roles: ROLE_ADMIN }
         #- { path: ^/, roles: ROLE_USER }
         #- { path: ^/login, roles: ROLE_USER }
+        - { path: ^/(franchise|partner|permission|register|admin), roles: ROLE_ADMIN }
         #- { path: ^(?!/(login|api)), roles: ROLE_ADMIN }
 
 when@test:
