--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,7 +34,8 @@ security:
         #- { path: ^/admin, roles: ROLE_ADMIN }
         #- { path: ^/, roles: ROLE_USER }
         #- { path: ^/login, roles: ROLE_USER }
-        - { path: ^/(franchise|partner|permission|register|admin), roles: ROLE_ADMIN }
+        - { path: ^/(franchise|partner|permission|admin), roles: ROLE_ADMIN }
+        #- { path: ^/register, roles: ROLE_ADMIN }
         #- { path: ^(?!/(login|api)), roles: ROLE_ADMIN }
 
 when@test:
