--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,6 +34,8 @@ security:
         #- { path: ^/admin, roles: ROLE_ADMIN }
         #- { path: ^/, roles: ROLE_USER }
         #- { path: ^/login, roles: ROLE_USER }
+        - { path: ^/franchise/maFranchise, roles: ROLE_FRANCHISE }
+        - { path: ^/franchise/monStructure, roles: ROLE_STRUCTURE }
         - { path: ^/(franchise|partner|permission|admin), roles: ROLE_ADMIN }
         #- { path: ^/register, roles: ROLE_ADMIN }
         #- { path: ^(?!/(login|api)), roles: ROLE_ADMIN }
