darkMode.js added to symfony.lock + alert hidden when a not logged user acces to homepage on DashboardController

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,6 +39,9 @@ security:
         - { path: ^/(franchise|partner|permission|admin), roles: ROLE_ADMIN }
         #- { path: ^/register, roles: ROLE_ADMIN }
         #- { path: ^(?!/(login|api)), roles: ROLE_ADMIN }
+        
+        #- { path: ^/(franchise|partner|permission|register|admin), roles: ROLE_ADMIN }
+
 
 when@test:
     security:
