--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
         "@fortawesome/fontawesome-free": "^6.2.0",
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.2.0",
+        "@symfony/ux-react": "file:vendor/symfony/ux-react/Resources/assets",
         "@symfony/webpack-encore": "^3.0.0",
         "core-js": "^3.23.0",
         "file-loader": "^6.2.0",
         "node-sass": "^7.0.1",
+        "react": "^18.0",
+        "react-dom": "^18.0",
         "regenerator-runtime": "^0.13.9",
         "sass-loader": "^13.0.2",
         "webpack-notifier": "^1.15.0"
