--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@popperjs/core": "^2.11.6",
         "autoprefixer": "^10.4.8",
+        "axios": "^1.1.3",
         "bootstrap": "^5.2.0",
         "bootstrap-icons": "^1.9.1",
         "postcss-loader": "^7.0.1"
