--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,10 +31,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        #- { path: ^/admin, roles: ROLE_ADMIN }
-        #- { path: ^/, roles: ROLE_USER }
-        #- { path: ^/login, roles: ROLE_USER }
-        - { path: ^/franchise/maFranchise, roles: ROLE_FRANCHISE, 
+        - { path: ^/franchise/mafranchise, roles: ROLE_FRANCHISE, 
             # requires_channel: '%env(SECURE_SCHEME)%'  
           }
         - { path: ^/partner/monStructure, roles: ROLE_PARTNER, 
@@ -44,6 +41,10 @@ security:
             roles: ROLE_ADMIN, 
             # requires_channel: '%env(SECURE_SCHEME)%'
           }
+
+        #- { path: ^/admin, roles: ROLE_ADMIN }
+        #- { path: ^/, roles: ROLE_USER }
+        #- { path: ^/login, roles: ROLE_USER }
         #- { path: ^/register, roles: ROLE_ADMIN }
         #- { path: ^(?!/(login|api)), roles: ROLE_ADMIN }
         
