--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,16 +31,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/franchise/mafranchise, roles: ROLE_FRANCHISE, 
-            # requires_channel: '%env(SECURE_SCHEME)%'  
-          }
-        - { path: ^/partner/monStructure, roles: ROLE_PARTNER, 
-            # requires_channel: '%env(SECURE_SCHEME)%'  
-          }
-        - { path: ^/(franchise|partner|permission|admin), 
-            roles: ROLE_ADMIN, 
-            # requires_channel: '%env(SECURE_SCHEME)%'
-          }
+        - { path: ^/franchise/mafranchise, roles: ROLE_FRANCHISE }
+        - { path: ^/partner/monStructure, roles: ROLE_PARTNER}
+        - { path: ^/(franchise|partner|permission|admin), roles: ROLE_ADMIN }
 
         #- { path: ^/admin, roles: ROLE_ADMIN }
         #- { path: ^/, roles: ROLE_USER }
