--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,8 +32,8 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/franchise/mafranchise, roles: ROLE_FRANCHISE }
-        - { path: ^/partner/monStructure, roles: ROLE_PARTNER}
-        - { path: ^/(franchise|partner|permission|admin), roles: ROLE_ADMIN }
+        - { path: ^/partner/monstructure, roles: ROLE_PARTNER} 
+        - { path: ^/(franchise|partner|permission|admin), roles: ROLE_ADMIN } ## at the end
 
         #- { path: ^/admin, roles: ROLE_ADMIN }
         #- { path: ^/, roles: ROLE_USER }
