bug in Franchise delete bug solved

--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -7,7 +7,8 @@ when@dev:
         handlers:
             main:
                 type: stream
-                path: "%kernel.logs_dir%/%kernel.environment%.log"
+                # path: "%kernel.logs_dir%/%kernel.environment%.log"
+                path: "var/log/prod.log"
                 level: debug
                 channels: ["!event"]
             # uncomment to get logging in your browser
