Bug in franchise search form fixed

--- a/.env.local.test
+++ b/.env.local.test
@@ -1,3 +1,3 @@
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://root@127.0.0.1:3306/todayfit_db_4_react?serverVersion=10.4.11-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://root@127.0.0.1:3306/todayfit_db?serverVersion=10.4.11-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
